samples/_failures_safe/1761520473_75ed7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91a6803e.c: In function ‘main’:
./samples/SAFE/__tmp_91a6803e.c:161:38: error: missing terminating ' character
  161 |     if (len > 0 && input[len - 1] == '\n
      |                                      ^~~
./samples/SAFE/__tmp_91a6803e.c:161:5: error: expected expression at end of input
  161 |     if (len > 0 && input[len - 1] == '\n
      |     ^~
./samples/SAFE/__tmp_91a6803e.c:161:5: error: expected declaration or statement at end of input
